<resources>
    <string name="app_name">Test</string>
    <string name="physics_test">Physics test</string>
    <string name="Math_test">math test</string>
    <string name="button2">buttton2</string>
    <string name="button1">button1</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
    <string name="button10">button10</string>
    <string name="_5_masala_hisoblang_rim_raqamlari_l_x_xxi_ix_v">5-Masala Hisoblang(rim raqamlari) L-X+XXI+IX-V</string>
    <string name="c_5">C) 5</string>
    <string name="d_13">D) 13</string>
    <string name="e_tjy">E) TJY</string>
    <string name="a_lxv">A) LXV</string>
    <string name="b_xlv">B) XLV</string>
    <string name="c_lxx">C) LXX</string>
    <string name="d_xlx">D) XLX</string>
    <string name="b_16">B) 16</string>
    <string name="a_12">A) 12</string>
    <string name="_4_masala_77_7_2_42_7">4-Masala (77-7^2+42):7</string>
    <string name="d_bilmayman">D) Bilmayman</string>
    <string name="c_ikkisi_teng">C) Ikkisi teng</string>
    <string name="b_3">B) (3!)!</string>
    <string name="a_7">A) 7!!</string>
    <string name="_3_masala_qaysi_son_katta_7_yoki_3">3-Masala Qaysi son katta 7!! yoki (3!)!</string>
    <string name="d_bunday_misol_mavjud_emas">D) Bunday misol mavjud emas</string>
    <string name="c_48">C) 48</string>
    <string name="b_5_040">B) 5 040</string>
    <string name="a_105">A) 105</string>
    <string name="_2_masala_7_nechaga_teng">2-Masala 7!! nechaga teng?</string>
    <string name="d_56">D) 56</string>
    <string name="c_32">C) 32</string>
    <string name="b_48">B) 48</string>
    <string name="a_10">A) 10</string>
    <string name="_1_masala_4_23_10_9_hisoblang">1-Masala (4!-23)^10+9 hisoblang</string>
    <string name="tugatish">Tugatish</string>
    <string name="_1_savol_erkin_tushish_tezlanishi_qanday_harf_bilan_belgilanadi">1-Savol Erkin tushish tezlanishi qanday harf bilan belgilanadi ?</string>
    <string name="b_m">B) m</string>
    <string name="c_a">C) a</string>
    <string name="d_p">D) P</string>
    <string name="e_k">E) k</string>
    <string name="_2_savol_jismning_tik_yuqoriga_otgandagi_maksimal_ko_tarilish_fo_rmulasini_belgilang">2-Savol Jismning tik yuqoriga otgandagi maksimal ko\'tarilish fo\'rmulasini belgilang</string>
    <string name="e_h_at_2_2">E) h=at^2 / 2</string>
    <string name="d_v_2_2g">D) v^2/2g</string>
    <string name="c_mg">C) mg</string>
    <string name="e_h_mt_2_2">E) h= mt^2 / 2</string>
    <string name="ft">Ft</string>
    <string name="a_ft">A) Ft</string>
    <string name="b_mg">B) mg</string>
    <string name="e_ma">E) ma</string>
    <string name="c_mv">C) mv</string>
    <string name="_3_savol_kuch_impulsi_formulasini_belgilang">3-Savol Kuch impulsi formulasini belgilang</string>
    <string name="a_2at_2">A) 2at^2</string>
    <string name="b_mv">B) mv</string>
    <string name="a_g">A) g</string>
    <string name="_4_savol_jism_impulsi_formulasini_belgilang">4-Savol Jism impulsi formulasini belgilang</string>
    <string name="_5_savol_jism_impulsining_o_zgarishi_nimaga_teng">5-Savol Jism impulsining o\'zgarishi nimaga teng ?</string>
    <string name="a_kuch_impulsiga">A) Kuch impulsiga</string>
    <string name="c_harakat_vaqtiga">C) harakat vaqtiga</string>
    <string name="b_jism_impulsiga">B) Jism impulsiga</string>
    <string name="d_tasir_kuchiga">D) tasir kuchiga</string>
    <string name="e_tezlanishga">E) tezlanishga</string>
</resources>