<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhysicsTest">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/test1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_savol_erkin_tushish_tezlanishi_qanday_harf_bilan_belgilanadi"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/savol1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_g"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button1"/>
            <RadioButton
                android:id="@+id/savol2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_m"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button2"/>
            <RadioButton
                android:id="@+id/savol3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_a"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button3"/>
            <RadioButton
                android:id="@+id/savol4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_p"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button4"/>
            <RadioButton
                android:id="@+id/savol5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_k"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button5"/>

        </RadioGroup>
        <RadioGroup
            android:id="@+id/test2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_savol_jismning_tik_yuqoriga_otgandagi_maksimal_ko_tarilish_fo_rmulasini_belgilang"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/savol6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_2at_2"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button6"/>
            <RadioButton
                android:id="@+id/savol7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_mv"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button7"/>
            <RadioButton
                android:id="@+id/savol8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_mg"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button8"/>
            <RadioButton
                android:id="@+id/savol9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_v_2_2g"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button9"/>
            <RadioButton
                android:id="@+id/savol10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_h_mt_2_2"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button10"/>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/test3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_savol_kuch_impulsi_formulasini_belgilang"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/savol11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/button1"
                android:text="@string/a_ft"
                android:textColor="#071591"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/savol12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_mg"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button2"/>
            <RadioButton
                android:id="@+id/savol13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_mv"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button3"/>

            <RadioButton
                android:id="@+id/savol14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/button4"
                android:text="@string/d_bilmayman"
                android:textColor="#071591"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/savol15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_ma"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button5"/>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/test4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_savol_jism_impulsi_formulasini_belgilang"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/savol16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_ft"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button1"/>

            <RadioButton
                android:id="@+id/savol17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/button2"
                android:text="@string/b_mg"
                android:textColor="#071591"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/savol18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_mv"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button3"/>
            <RadioButton
                android:id="@+id/savol19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_bilmayman"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button4"/>

            <RadioButton
                android:id="@+id/savol20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/button5"
                android:text="@string/e_tjy"
                android:textColor="#071591"
                android:textSize="25sp" />
        </RadioGroup>
        <RadioGroup
            android:id="@+id/test5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_savol_jism_impulsining_o_zgarishi_nimaga_teng"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/savol21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/button1"
                android:text="@string/a_kuch_impulsiga"
                android:textColor="#071591"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/savol22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_jism_impulsiga"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button2"/>
            <RadioButton
                android:id="@+id/savol23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_harakat_vaqtiga"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button3"/>

            <RadioButton
                android:id="@+id/savol24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_tasir_kuchiga"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button5"/>
            <RadioButton
                android:id="@+id/savol25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_tezlanishga"
                android:textSize="25sp"
                android:textColor="#071591"
                android:tag="@string/button1"/>
        </RadioGroup>
        <Button
            android:id="@+id/tugat"
            android:layout_gravity="center_horizontal"
            android:layout_width="180sp"
            android:layout_height="70sp"
            android:text="@string/tugatish">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>